// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`methods submitRequest graphql failure 1`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Submission error
    </title>
  </SideEffect(Head)>
  <FormDialog>
    <SubmitPane
      error={
        GraphQLError {
          "errors": Array [
            Object {
              "message": "All required fields were missing",
            },
            Object {
              "message": "Also your location is in Cambridge",
            },
          ],
          "message": "Error submitting",
        }
      }
      state="error"
    />
  </FormDialog>
</div>
`;

exports[`methods submitRequest success 1`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Submitting…
    </title>
  </SideEffect(Head)>
  <FormDialog>
    <SubmitPane
      state="submitting"
    />
  </FormDialog>
</div>
`;

exports[`methods submitRequest success 2`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Success: Case new-request
    </title>
  </SideEffect(Head)>
  <FormDialog>
    <SubmitPane
      state="success"
      submittedRequest={
        Object {
          "id": "new-request",
          "requestedAt": 1488464201,
          "status": "open",
        }
      }
    />
  </FormDialog>
</div>
`;

exports[`rendering contact 1`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1f2iwx6": "",
      }
    }
  >
    <div>
      <div>
        <h2
          className={
            Object {
              "data-css-16pm9zd": "",
            }
          }
        >
          CONTACT FORM
        </h2>
        <div
          className={
            Object {
              "data-css-1w0rge6": "",
            }
          }
        >
          (will not be shared with public; leave blank to submit anonymously)
        </div>
        <label
          className={
            Object {
              "data-css-12a7iqv": "",
            }
          }
        >
          <span>
            First Name 
            (required)
          </span>
          <input
            className={
              Object {
                "data-css-b35x0h": "",
              }
            }
            name="firstName"
            onChange={[Function]}
            placeholder="First Name"
            value=""
          />
        </label>
        <label
          className={
            Object {
              "data-css-12a7iqv": "",
            }
          }
        >
          <span>
            Last Name 
            (required)
          </span>
          <input
            className={
              Object {
                "data-css-b35x0h": "",
              }
            }
            name="lastName"
            onChange={[Function]}
            placeholder="Last Name"
            value=""
          />
        </label>
        <label
          className={
            Object {
              "data-css-12a7iqv": "",
            }
          }
        >
          <span>
            Email
          </span>
          <input
            className={
              Object {
                "data-css-b35x0h": "",
              }
            }
            name="email"
            onChange={[Function]}
            placeholder="Email"
            type="email"
            value=""
          />
        </label>
        <label
          className={
            Object {
              "data-css-12a7iqv": "",
            }
          }
        >
          <span>
            Phone
          </span>
          <input
            className={
              Object {
                "data-css-b35x0h": "",
              }
            }
            name="phone"
            onChange={[Function]}
            placeholder="Phone"
            type="tel"
            value=""
          />
        </label>
      </div>
      <button
        disabled={true}
        onClick={[Function]}
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`rendering location 1`] = `
<div
  className={
    Object {
      "data-css-15pzzh6": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1f2iwx6": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-84wcpg": "",
        }
      }
    >
      <h3
        className={
          Object {
            "data-css-4ptjc6": "",
          }
        }
      >
        Where is the problem happening?
      </h3>
      
      <form
        className={
          Object {
            "data-css-19lcmdn": "",
          }
        }
        onSubmit={[Function]}
      >
        <input
          className={
            Object {
              "data-css-1rqhb6b": "",
            }
          }
          onInput={[Function]}
          placeholder="Search for an address…"
          type="text"
          value=""
        />
        <button
          disabled={true}
          type="submit"
        >
          Search
        </button>
      </form>
      <div
        className={
          Object {
            "data-css-19e7ai6": "",
          }
        }
      >
        <button
          className={
            Object {
              "data-css-1wppbi7": "",
            }
          }
          disabled={true}
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering questions 1`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1f2iwx6": "",
      }
    }
  >
    <div>
      <div
        className={
          Object {
            "data-css-dgukzt": "",
          }
        }
      >
        
      </div>
      <label>
        <p>
          Please provide any other relevant information:
           
        </p>
        <textarea
          className={
            Object {
              "data-css-1bm19ha": "",
            }
          }
          name="ST-CMTS"
          onChange={[Function]}
          value=""
        />
      </label>
      <label>
        <p>
          **All cosmic incursion cases should be followed up with a phone call to Alpha Flight.**
           
        </p>
        <input
          className={
            Object {
              "data-css-rqg0fb": "",
            }
          }
          name="INFO-CSIRMV1"
          onChange={[Function]}
          type="text"
          value=""
        />
      </label>
      <label>
        <p>
          How many dimensions have been breached?
           
          (required)
        </p>
        <select
          name="SR-CSIRMV1"
          onChange={[Function]}
          value={null}
        >
          <option
            disabled={true}
            selected={true}
          >
            Please choose
          </option>
          <option
            disabled={true}
          >
            --------------------------
          </option>
          <option
            value="One"
          >
            One
          </option>
          <option
            value="Two"
          >
            Two
          </option>
          <option
            value="Three"
          >
            Three
          </option>
          <option
            value="More than Three"
          >
            More than Three
          </option>
        </select>
      </label>
      <div>
        <button
          disabled={true}
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;
